Added unique href jump id's to future proof

--- a/sample/icon-fonts.html
+++ b/sample/icon-fonts.html
@@ -228,7 +228,7 @@ Based on Twitter Bootstrap
 <body>
 
     <header role="banner" id="header" class="global-header">
-        <div id="skip-to-content"><a href="#main-content">Skip to Main Content</a></div>
+        <div id="skip-to-content"><a href="#icon-main-content">Skip to Main Content</a></div>
 
         <!-- Include Utility Header -->
         <!--#include virtual="/ssi/utility-header.html" -->
@@ -273,36 +273,36 @@ Based on Twitter Bootstrap
                 <p>When icons are used with H1 to H5 headings and some pre-configured modules, font size and color styles are included. When used anywhere else, you'll need to add styles for the font-size and color yourself. Icon fonts can be styled using the same css rules used to style any other text on the page. For example <code>color:</code> and <code>font-size:</code> change the color and size of the icon.</p>                <hr>
                 <h2>Jump to:</h2>
                 <ul class="icon-search">
-                    <li><a href="#a" title="A">A</a></li>
-                    <li><a href="#b" title="B">B</a></li>
-                    <li><a href="#c" title="C">C</a></li>
-                    <li><a href="#d" title="D">D</a></li>
-                    <li><a href="#e" title="E">E</a></li>
-                    <li><a href="#f" title="F">F</a></li>
-                    <li><a href="#g" title="G">G</a></li>
-                    <li><a href="#h" title="H">H</a></li>
-                    <li><a href="#i" title="I">I</a></li>
-                    <li><a href="#j" title="J">J</a></li>
-                    <li><a href="#k" title="K">K</a></li>
-                    <li><a href="#l" title="L">L</a></li>
-                    <li><a href="#m" title="M">M</a></li>
-                    <li><a href="#n" title="N">N</a></li>
-                    <li><a href="#o" title="O">O</a></li>
-                    <li><a href="#p" title="P">P</a></li>
-                    <li><a href="#q" title="Q">Q</a></li>
-                    <li><a href="#r" title="R">R</a></li>
-                    <li><a href="#s" title="S">S</a></li>
-                    <li><a href="#t" title="T">T</a></li>
-                    <li><a href="#u" title="U">U</a></li>
-                    <li><a href="#v" title="V">V</a></li>
-                    <li><a href="#w" title="W">W</a></li>
-                    <li><a href="#x" title="X">X</a></li>
-                    <li><a href="#y" title="Y">Y</a></li>
-                    <li><a href="#z" title="Z">Z</a></li>
+                    <li><a href="#icon-a" title="A">A</a></li>
+                    <li><a href="#icon-b" title="B">B</a></li>
+                    <li><a href="#icon-c" title="C">C</a></li>
+                    <li><a href="#icon-d" title="D">D</a></li>
+                    <li><a href="#icon-e" title="E">E</a></li>
+                    <li><a href="#icon-f" title="F">F</a></li>
+                    <li><a href="#icon-g" title="G">G</a></li>
+                    <li><a href="#icon-h" title="H">H</a></li>
+                    <li><a href="#icon-i" title="I">I</a></li>
+                    <li><a href="#icon-j" title="J">J</a></li>
+                    <li><a href="#icon-k" title="K">K</a></li>
+                    <li><a href="#icon-l" title="L">L</a></li>
+                    <li><a href="#icon-m" title="M">M</a></li>
+                    <li><a href="#icon-n" title="N">N</a></li>
+                    <li><a href="#icon-o" title="O">O</a></li>
+                    <li><a href="#icon-p" title="P">P</a></li>
+                    <li><a href="#icon-q" title="Q">Q</a></li>
+                    <li><a href="#icon-r" title="R">R</a></li>
+                    <li><a href="#icon-s" title="S">S</a></li>
+                    <li><a href="#icon-t" title="T">T</a></li>
+                    <li><a href="#icon-u" title="U">U</a></li>
+                    <li><a href="#icon-v" title="V">V</a></li>
+                    <li><a href="#icon-w" title="W">W</a></li>
+                    <li><a href="#icon-x" title="X">X</a></li>
+                    <li><a href="#icon-y" title="Y">Y</a></li>
+                    <li><a href="#icon-z" title="Z">Z</a></li>
                 </ul>
                 <!-- START ICOMOON DEMO -->
                 <div class="clearfix mhl ptl">
-                    <h2 id="a">A</h2>
+                    <h2 id="icon-a">A</h2>
                     <div class="glyph fs1">
                         <div class="clearfix bshadow0 pbs">
                             <span class="ca-gov-icon-accessibility"></span>
@@ -581,7 +581,7 @@ Based on Twitter Bootstrap
                             <span class="unit pvs fgc1">liga</span>
                         </div>
                     </div>
-                    <h2 id="b">B</h2>
+                    <h2 id="icon-b">B</h2>
                     <div class="glyph fs1">
                         <div class="clearfix bshadow0 pbs">
                             <span class="ca-gov-icon-baloons"></span>
@@ -825,7 +825,7 @@ Based on Twitter Bootstrap
                             <span class="unit pvs fgc1">liga</span>
                         </div>
                     </div>
-                    <h2 id="c">C</h2>
+                    <h2 id="icon-c">C</h2>
                     <div class="glyph fs1">
                         <div class="clearfix bshadow0 pbs">
                             <span class="ca-gov-icon-ca-capitol"></span>
@@ -1609,7 +1609,7 @@ Based on Twitter Bootstrap
                             <span class="unit pvs fgc1">liga</span>
                         </div>
                     </div>
-                    <h2 id="d">D</h2>
+                    <h2 id="icon-d">D</h2>
                     <div class="glyph fs1">
                         <div class="clearfix bshadow0 pbs">
                             <span class="ca-gov-icon-dam"></span>
@@ -1781,7 +1781,7 @@ Based on Twitter Bootstrap
                             <span class="unit pvs fgc1">liga</span>
                         </div>
                     </div>
-                    <h2 id="e">E</h2>
+                    <h2 id="icon-e">E</h2>
                     <div class="glyph fs1">
                         <div class="clearfix bshadow0 pbs">
                             <span class="ca-gov-icon-ear"></span>
@@ -1899,7 +1899,7 @@ Based on Twitter Bootstrap
                             <span class="unit pvs fgc1">liga</span>
                         </div>
                     </div>
-                    <h2 id="f">F</h2>
+                    <h2 id="icon-f">F</h2>
                     <div class="glyph fs1">
                         <div class="clearfix bshadow0 pbs">
                             <span class="ca-gov-icon-facebook"></span>
@@ -2269,7 +2269,7 @@ Based on Twitter Bootstrap
                             <span class="unit pvs fgc1">liga</span>
                         </div>
                     </div>
-                    <h2 id="g">G</h2>
+                    <h2 id="icon-g">G</h2>
                     <div class="glyph fs1">
                         <div class="clearfix bshadow0 pbs">
                             <span class="ca-gov-icon-gas-pump"></span>
@@ -2387,7 +2387,7 @@ Based on Twitter Bootstrap
                             <span class="unit pvs fgc1">liga</span>
                         </div>
                     </div>
-                    <h2 id="h">H</h2>
+                    <h2 id="icon-h">H</h2>
                     <div class="glyph fs1">
                         <div class="clearfix bshadow0 pbs">
                             <span class="ca-gov-icon-hair"></span>
@@ -2559,7 +2559,7 @@ Based on Twitter Bootstrap
                             <span class="unit pvs fgc1">liga</span>
                         </div>
                     </div>
-                    <h2 id="i">I</h2>
+                    <h2 id="icon-i">I</h2>
                     <div class="glyph fs1">
                         <div class="clearfix bshadow0 pbs">
                             <span class="ca-gov-icon-idea"></span>
@@ -2667,7 +2667,7 @@ Based on Twitter Bootstrap
                             <span class="unit pvs fgc1">liga</span>
                         </div>
                     </div>
-                    <h2 id="j">J</h2>
+                    <h2 id="icon-j">J</h2>
                     <div class="glyph fs1">
                         <div class="clearfix bshadow0 pbs">
                             <span class="ca-gov-icon-justice-legal"></span>
@@ -2677,7 +2677,7 @@ Based on Twitter Bootstrap
                             <span class="unit pvs fgc1">liga</span>
                         </div>
                     </div>
-                    <h2 id="k">K</h2>
+                    <h2 id="icon-k">K</h2>
                     <div class="glyph fs1">
                         <div class="clearfix bshadow0 pbs">
                             <span class="ca-gov-icon-key"></span>
@@ -2687,7 +2687,7 @@ Based on Twitter Bootstrap
                             <span class="unit pvs fgc1">liga</span>
                         </div>
                     </div>
-                    <h2 id="l">L</h2>
+                    <h2 id="icon-l">L</h2>
                     <div class="glyph fs1">
                         <div class="clearfix bshadow0 pbs">
                             <span class="ca-gov-icon-lab-tests"></span>
@@ -2778,7 +2778,7 @@ Based on Twitter Bootstrap
                             <span class="unit pvs fgc1">liga</span>
                         </div>
                     </div>
-                    <h2 id="m">M</h2>
+                    <h2 id="icon-m">M</h2>
                     <div class="glyph fs1">
                         <div class="clearfix bshadow0 pbs">
                             <span class="ca-gov-icon-magnify-glass"></span>
@@ -3049,7 +3049,7 @@ Based on Twitter Bootstrap
                             <span class="unit pvs fgc1">liga</span>
                         </div>
                     </div>
-                    <h2 id="n">N</h2>
+                    <h2 id="icon-n">N</h2>
                     <div class="glyph fs1">
                         <div class="clearfix bshadow0 pbs">
                             <span class="ca-gov-icon-nail-polish"></span>
@@ -3104,7 +3104,7 @@ Based on Twitter Bootstrap
                             <span class="unit pvs fgc1">liga</span>
                         </div>
                     </div>
-                    <h2 id="o">O</h2>
+                    <h2 id="icon-o">O</h2>
                     <div class="glyph fs1">
                         <div class="clearfix bshadow0 pbs">
                             <span class="ca-gov-icon-online-education"></span>
@@ -3159,7 +3159,7 @@ Based on Twitter Bootstrap
                             <span class="unit pvs fgc1">liga</span>
                         </div>
                     </div>
-                    <h2 id="p">P</h2>
+                    <h2 id="icon-p">P</h2>
                     <div class="glyph fs1">
                         <div class="clearfix bshadow0 pbs">
                             <span class="ca-gov-icon-paddle-boat"></span>
@@ -3421,7 +3421,7 @@ Based on Twitter Bootstrap
                             <span class="unit pvs fgc1">liga</span>
                         </div>
                     </div>
-                    <h2 id="q">Q</h2>
+                    <h2 id="icon-q">Q</h2>
                     <div class="glyph fs1">
                         <div class="clearfix bshadow0 pbs">
                             <span class="ca-gov-icon-quake-hazard"></span>
@@ -3476,7 +3476,7 @@ Based on Twitter Bootstrap
                             <span class="unit pvs fgc1">liga</span>
                         </div>
                     </div>
-                    <h2 id="r">R</h2>
+                    <h2 id="icon-r">R</h2>
                     <div class="glyph fs1">
                         <div class="clearfix bshadow0 pbs">
                             <span class="ca-gov-icon-radiation"></span>
@@ -3603,7 +3603,7 @@ Based on Twitter Bootstrap
                             <span class="unit pvs fgc1">liga</span>
                         </div>
                     </div>
-                    <h2 id="s">S</h2>
+                    <h2 id="icon-s">S</h2>
                     <div class="glyph fs1">
                         <div class="clearfix bshadow0 pbs">
                             <span class="ca-gov-icon-safari"></span>
@@ -4027,7 +4027,7 @@ Based on Twitter Bootstrap
                             <span class="unit pvs fgc1">liga</span>
                         </div>
                     </div>
-                    <h2 id="t">T</h2>
+                    <h2 id="icon-t">T</h2>
                     <div class="glyph fs1">
                         <div class="clearfix bshadow0 pbs">
                             <span class="ca-gov-icon-table"></span>
@@ -4334,7 +4334,7 @@ Based on Twitter Bootstrap
                             <span class="unit pvs fgc1">liga</span>
                         </div>
                     </div>
-                    <h2 id="u">U</h2>
+                    <h2 id="icon-u">U</h2>
                     <div class="glyph fs1">
                         <div class="clearfix bshadow0 pbs">
                             <span class="ca-gov-icon-up"></span>
@@ -4479,7 +4479,7 @@ Based on Twitter Bootstrap
                             <span class="unit pvs fgc1">liga</span>
                         </div>
                     </div>
-                    <h2 id="v">V</h2>
+                    <h2 id="icon-v">V</h2>
                     <div class="glyph fs1">
                         <div class="clearfix bshadow0 pbs">
                             <span class="ca-gov-icon-van"></span>
@@ -4561,6 +4561,7 @@ Based on Twitter Bootstrap
                             <span class="unit pvs fgc1">liga</span>
                         </div>
                     </div>
+                    <h2 id="icon-w">W</h2>
                     <div class="glyph fs1">
                         <div class="clearfix bshadow0 pbs">
                             <span class="ca-gov-icon-wallet"></span>
@@ -4624,7 +4625,7 @@ Based on Twitter Bootstrap
                             <span class="unit pvs fgc1">liga</span>
                         </div>
                     </div>
-                    <h2 id="y">Y</h2>
+                    <h2 id="icon-y">Y</h2>
                     <div class="glyph fs1">
                         <div class="clearfix bshadow0 pbs">
                             <span class="ca-gov-icon-yacht"></span>
@@ -4643,7 +4644,7 @@ Based on Twitter Bootstrap
                             <span class="unit pvs fgc1">liga</span>
                         </div>
                     </div>
-                    <h2 id="z">Z</h2>
+                    <h2 id="icon-z">Z</h2>
                     <div class="glyph fs1">
                         <div class="clearfix bshadow0 pbs">
                             <span class="ca-gov-icon-zipped-file"></span>
