--- a/sample/icon-fonts.html
+++ b/sample/icon-fonts.html
@@ -228,7 +228,7 @@ Based on Twitter Bootstrap
 <body>
 
     <header role="banner" id="header" class="global-header">
-        <div id="skip-to-content"><a href="#icon-main-content">Skip to Main Content</a></div>
+        <div id="skip-to-content"><a href="#main-content">Skip to Main Content</a></div>
 
         <!-- Include Utility Header -->
         <!--#include virtual="/ssi/utility-header.html" -->
