--- a/ssi/analytics.html
+++ b/ssi/analytics.html
@@ -1,19 +1,32 @@
-<script type="text/javascript">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() { dataLayer.push(arguments); }
+  gtag('js', new Date());
 
-  var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-XXXXXXX']); // Step 4: your google analytics profile code, either from your own google account, or contact eServices to have one set up for you
-  _gaq.push(['_gat._anonymizeIp']);
-  _gaq.push(['_setDomainName', '.ca.gov']);
-  _gaq.push(['_trackPageview']);
+  //statewide GA property
+  gtag('config', 'UA-3419582-2');
+  //please update state department UA code in line below before deployment	
+  gtag('config', 'UA-xxxxxx-xx');
+  //un-comment line below and update UA code to add a third GA property
+  //gtag('config', 'UA-xxxxxx-xx');
 
-  _gaq.push(['b._setAccount', 'UA-3419582-2']); // statewide analytics - do not remove or change
-  _gaq.push(['b._setDomainName', '.ca.gov']);
-  _gaq.push(['b._trackPageview']);
+  var getOutboundLink = function (url) {
+    gtag('event', 'click', {
+      'event_category': 'navigation',
+      'event_label': 'outbound link: ' + url,
+      'transport_type': 'beacon',
+      'event_callback': function () { document.location = url; }
+    });
+  }
 
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
+  var trackDownload = function (filename) {
+    gtag('event', 'click', {
+      'event_category': 'download',
+      'event_label': 'file: ' + filename,
+      'transport_type': 'beacon',
+      'event_callback': function () { document.location = url; }
+    });
+  }
 </script>
