--- a/ssi/head-css-js.html
+++ b/ssi/head-css-js.html
@@ -44,9 +44,10 @@ Select a color scheme:
 <script src="/js/libs/selectivizr-min.js"></script>
 <![endif]-->
 <!-- Load jQuery from CDN with fallback to local copy -->
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-        crossorigin="anonymous"></script>
+<script
+  src="https://code.jquery.com/jquery-3.5.1.min.js"
+  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+  crossorigin="anonymous"></script>
 <script>
     //Fall back to local copy if no jquery found
     if (typeof jQuery == 'undefined') {
@@ -54,9 +55,10 @@ Select a color scheme:
     }
 </script>
 <!-- Load jQuery migrate from CDN with fallback to local copy -->
-<script src="https://code.jquery.com/jquery-migrate-3.3.0.min.js"
-        integrity="sha256-wZ3vNXakH9k4P00fNGAlbN0PkpKSyhRa76IFy4V1PYE="
-        crossorigin="anonymous"></script>
+<script
+  src="https://code.jquery.com/jquery-migrate-3.3.2.min.js"
+  integrity="sha256-Ap4KLoCf1rXb52q+i3p0k2vjBsmownyBTE1EqlRiMwA="
+  crossorigin="anonymous"></script>
 <script>
     //Fall back to local copy if no jQuery migrate found
     if (typeof jQuery.migrateWarnings == 'undefined') { // or typeof jQuery.fn.live == 'undefined'
