updated some icon codes

--- a/sample/icon-fonts.html
+++ b/sample/icon-fonts.html
@@ -500,7 +500,7 @@ Based on Twitter Bootstrap
                         <div class="clearfix bshadow0 pbs"><span class="ca-gov-icon-bars-upward"></span><span
                                 class="mls">
                                 ca-gov-icon-bars-upward</span></div>
-                        <p class="icon-value">e9fc</p>
+                        <p class="icon-value">ea1d</p>
                     </div>
                     <div class="glyph fs1">
                         <div class="clearfix bshadow0 pbs"><span class="ca-gov-icon-baseballl"></span><span class="mls">
@@ -2069,7 +2069,7 @@ Based on Twitter Bootstrap
                         <div class="clearfix bshadow0 pbs"><span class="ca-gov-icon-online-help"></span><span
                                 class="mls">
                                 ca-gov-icon-online-help</span></div>
-                        <p class="icon-value">ea12</p>
+                        <p class="icon-value">ea1e</p>
                     </div>
                     <div class="glyph fs1">
                         <div class="clearfix bshadow0 pbs"><span class="ca-gov-icon-online-module"></span><span
@@ -2589,7 +2589,7 @@ Based on Twitter Bootstrap
                         <div class="clearfix bshadow0 pbs"><span class="ca-gov-icon-speech-dialog"></span><span
                                 class="mls">
                                 ca-gov-icon-speech-dialog</span></div>
-                        <p class="icon-value">ea0c</p>
+                        <p class="icon-value">ea1f</p>
                     </div>
                     <div class="glyph fs1">
                         <div class="clearfix bshadow0 pbs"><span class="ca-gov-icon-speedtrain"></span><span
@@ -2896,7 +2896,7 @@ Based on Twitter Bootstrap
                         <div class="clearfix bshadow0 pbs"><span class="ca-gov-icon-users-check-mark"></span><span
                                 class="mls">
                                 ca-gov-icon-users-check-mark</span></div>
-                        <p class="icon-value">e9fe</p>
+                        <p class="icon-value">ea27</p>
                     </div>
                     <div class="glyph fs1">
                         <div class="clearfix bshadow0 pbs"><span class="ca-gov-icon-users-dialog"></span><span
@@ -2908,7 +2908,7 @@ Based on Twitter Bootstrap
                         <div class="clearfix bshadow0 pbs"><span class="ca-gov-icon-users-huddle"></span><span
                                 class="mls">
                                 ca-gov-icon-users-huddle</span></div>
-                        <p class="icon-value">e9fb</p>
+                        <p class="icon-value">ea28</p>
                     </div>
                     <div class="glyph fs1">
                         <div class="clearfix bshadow0 pbs"><span class="ca-gov-icon-users-interaction"></span><span
