commented out deprecated collapse extension accessibility plugin

--- a/general-landing.html
+++ b/general-landing.html
@@ -249,7 +249,7 @@
                                     </div>
                                 </div>
                                 <div class="text-center m-b">
-                                    <a href="javascript:;" role="button" data-toggle="collapse" data-parent="#collapseCALHR" aria-expanded="false" data-target=".collapseCALHR">
+                                    <a href="javascript:;" role="button" data-toggle="collapse" data-parent="#collapseCALHR" aria-expanded="false" aria-controls="collapseCALHR" data-target=".collapseCALHR">
                                         <span class="toggle-more"></span><span class="sr-only">Open</span>
                                     </a>
                                 </div>
