--- a/sample/modules/progress-bar-striped.html
+++ b/sample/modules/progress-bar-striped.html
@@ -1,5 +1,5 @@
 <div class="progress">
-    <div class="progress-bar progress-bar-striped bg-standout" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+    <div class="progress-bar progress-bar-striped bg-standout overflow-auto" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
         60%
     </div>
 </div>
