--- a/sample/modules/progress-bar-variety.html
+++ b/sample/modules/progress-bar-variety.html
@@ -1,13 +1,13 @@
 <div class="progress m-b-md  height-50 rounded-50">
     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-        <span class="font-size-25">60%</span>
+        <span class="font-size-25 overflow-auto">60%</span>
     </div>
 </div>
 
 <h6 class="m-b-sm">Project Completeness</h6>
 <div class="progress height-20 m-b-md overflow-visible">
     <div class="progress-bar pos-rel bg-primary" role="progressbar" style="width: 83%" aria-valuenow="83" aria-valuemin="0" aria-valuemax="100">
-        <div class="text-center progress-pointer bg-primary font-size-12">83%</div>
+        <div class="text-center progress-pointer bg-primary font-size-12 overflow-auto">83%</div>
     </div>
 </div>
 
